# My-Passwords

./: .eslintignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: fixme.yaml  publish-to-manual-release.yml
database/: 003_twofactor.surql  004_account.surql  005_secure_account.surql  006_supersecure_account.surql  008_legacy_account.surql  009_account_logic.surql  009_logic.surql  009_user_logic.surql  Cargo.toml  history.txt  init.surql  startup.ps1
database/datamodel/: 000_namespace.surql  001_user.surql  002_bucket.surql  003_twofactor.surql  004_account.surql  005_secure_account.surql  006_supersecure_account.surql  007_sso_account.surql  008_legacy_account.surql
database/logic/: 000_roadmap.surql  000_user_logic.surql  001_account_logic.surql  002_bucket_logic.surql  003_twofactor_logic.surql
database/src/: main.rs
database/tests/: 000_testdata.surql  000_wipe.surql  001_test_account_logic.surql  002_test_bucket_logic.surql
src/: 404.html  App.svelte  app.html  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  v1.dbml  v2.dbml  v3.dbml  v4.dbml
src-tauri/entities/: Cargo.toml
src-tauri/entities/src/: account.rs  bucket.rs  institution.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  secure_account.rs  sso_account.rs  super_secure_account.rs  user.rs
src-tauri/icons/: icon.icns
src-tauri/migration/src/: lib.rs  m20220101_000001_init_db.rs
src-tauri/migrations/2022-10-02-165603_create_password_meta/: down.sql  up.sql
src-tauri/migrations/2022-10-20-065151_create_users/: down.sql  up.sql
src-tauri/src/: algorithm.rs  common.rs  database.rs  errors.rs  generator.rs  handlers.rs  main.rs  model.rs  schema.rs
src-tauri/src/algorithm/: legacy.rs  mod.rs  secure.rs  supersecure.rs
src-tauri/src/auth/: cookie.rs  error.rs  handlers.rs  mod.rs  session.rs  types.rs  user.rs
src-tauri/src/entities/: account.rs  bucket.rs  institution.rs  mod.rs  prelude.rs  user.rs
src-tauri/src/handlers/: accounts-old.rs  accounts.rs  auth.rs  buckets.rs  database.rs  mod.rs  search.rs  sso.rs  twofactors.rs
src-tauri/src/handlers/accounts/: all.rs  legacy.rs  mod.rs  secure.rs  sso.rs  supersecure.rs  types.rs
src-tauri/src/migrator/: m20230727_000001_init.rs  mod.rs
src-tauri/src/types/: handlers.rs  industry.rs  mod.rs  mode.rs
src/interfaces/: acc.d.ts
src/lib/: AccTile.svelte  Accounts.svelte  Buckets.svelte  Create.svelte  CreateBucket.svelte  CreateSecure.svelte  EditSecure.svelte  Greet.svelte  Recents.svelte  Start.svelte  UIShell.svelte  bindings.ts  errorutils.ts  md-bind-value.ts  types.ts
src/lib/cards/: AccountCard.svelte  BucketCard.svelte  PopularCard.svelte  RecentCard.svelte
src/lib/container/: Buckets.svelte  Popular.svelte  Recents.svelte  (+2 more)
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts  Start.svelte
(+31 files in other folders)
