[package]
name = "my-passwords"
version = "0.0.1"
description = "A Tauri App"
authors = ["Tobias Hölzer"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
chrono = { version="0.4", features = ["serde"] }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
