[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[lints.rust]
unused = "allow"


[dependencies]
#entities = { path = "entities" }
#migration = { path = "migration" } # depends on your needs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tauri = { version = "1.4.0", features = [
    "http-all",
    "fs-read-file",
    "dialog-open",
    "dialog-ask",
    "clipboard-all",
] }
#sea-orm = { version = "0.12", features = [
#  "sqlx-postgres",
#  "runtime-tokio-rustls",
#  "macros",
#  "with-chrono",
#] }
#sea-orm-migration = "0.12"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
specta = "1.0"
tauri-specta = { version = "1.0", features = ["typescript"] }
regex = "1.9.1"
once_cell = "1.18.0"
surrealdb = "1.5.4"
orion = "0.17.6"
itertools = "0.12.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
